AWS_CLUSTER/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: kubernetes-github-actions
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: amazonaws.com/kubernetes-github-actions
        ports:
        - containerPort: 80
          name: website
