AWS_CLUSTER/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: website
    namespace: eks-practicepractice
    labels:
        app: website
    annotations:
      service.beta.kubernetes.io/aws-load-balancer-type: nlb
      service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:eu-west-2:601197766298:certificate/9549bafb-0331-4d90-a419-b8106e24f333"
      service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "TCP"
spec:
    type: LoadBalancer
    selector:
        app: website
    ports:
    - name: http
      port: 80
      protocol: TCP  
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 80
